--- a/content/post/20180905-Dear_Mrs_R.md
+++ b/content/post/20180905-Dear_Mrs_R.md
@@ -3,7 +3,7 @@ title = "Dear Mrs. R—"
 author = ["Christopher Walborn"]
 date = 2018-09-05T00:00:00-04:00
 lastmod = 2018-09-05T14:54:57-04:00
-tags = ["letter", "America", "race"]
+tags = ["letters", "America", "race"]
 categories = ["living-in-the-world"]
 draft = false
 +++
